--- a/index.html
+++ b/index.html
@@ -1,10 +1,34 @@
-<html>
-  <head>
-    <meta charset='utf-8'>
-    <title>タイトル</title>
-  </head>
-  <body>
-    <!-- ここに書きたい内容を書く -->
-    Hello World
-  </body>
-</html>
+---
+layout: examples
+title: Cover Template
+extra_css: "cover.css"
+body_class: "text-center"
+include_js: false
+---
+
+<div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
+  <header class="masthead mb-auto">
+    <div class="inner">
+      <h3 class="masthead-brand">Home</h3>
+      <nav class="nav nav-masthead justify-content-center">
+        <a class="nav-link active" href="#">Home</a>
+        <a class="nav-link" href="#">Features</a>
+        <a class="nav-link" href="#">Contact</a>
+      </nav>
+    </div>
+  </header>
+
+  <main role="main" class="inner cover">
+    <h1 class="cover-heading">Masaaki Matsunaga</h1>
+    <p class="lead">I am a M.S. student in the depertment of Information Technology at the University of the Ryukyus. My research area is Computer Vision. I specialize in Deep Learning Theory and have internship experience at a venture company that analyzes Big Data. My CV can be found the below button</p>
+    <p class="lead">
+      <a href="#" class="btn btn-lg btn-secondary">My CV</a>
+    </p>
+  </main>
+
+  <footer class="mastfoot mt-auto">
+    <div class="inner">
+      <p>Cover template for <a href="https://getbootstrap.com/">testtest</a>, by <a href="https://twitter.com/mdo">castle2164m@gmail.com</a>.</p>
+    </div>
+  </footer>
+</div>
