--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ include_js: false
     <link href="../assets/css/ie10-viewport-bug-workaround.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
-    <link href="../assets/css/jumbotron.css" rel="stylesheet">
+    <link href="../assets/css/cover.css" rel="stylesheet">
 
     <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
     <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
@@ -37,7 +37,7 @@ include_js: false
     <![endif]-->
   </head>
 
-
+<body>
 
 <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
   <header class="masthead mb-auto">
@@ -65,3 +65,6 @@ include_js: false
     </div>
   </footer>
 </div>
+
+
+</body>
