--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ include_js: false
     <link href="./assets/css/docs.min.css" rel="stylesheet">
 
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-    <link href="./assets/css/ie10-viewport-bug-workaround.css" rel="stylesheet">
+<!--    <link href="./assets/css/ie10-viewport-bug-workaround.css" rel="stylesheet"> -->
 
     <!-- Custom styles for this template -->
     <link href="./assets/css/cover.css" rel="stylesheet">
