--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 ---
 layout: examples
 title: Cover Template
-extra_css: "cover.css"
+<!-- extra_css: "cover.css"-->
 body_class: "text-center"
 include_js: false
 ---
 
+<html lang="en">
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -76,4 +77,6 @@ include_js: false
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
     <script src="./assets/js/ie10-viewport-bug-workaround.js"></script>
 
+
 </body>
+</html>
