--- a/index.html
+++ b/index.html
@@ -10,18 +10,36 @@ include_js: false
 <head>
    <h1 class="cover-heading">Masaaki Matsunaga</h1>
     <p class="lead">I am a M.S. student in the depertment of Information Technology at the University of the Ryukyus. My research area is Computer Vision. I specialize in Deep Learning Theory and have internship experience at a venture company that analyzes Big Data. My CV can be found the below button</p>
+    
     <p class="lead">
       <a href="#" class="btn btn-lg btn-secondary">My CV</a>
     </p>
-  </main>
 
-  <footer class="mastfoot mt-auto">
-    <div class="inner">
-      <p>Cover template for <a href="https://getbootstrap.com/">testtest</a>, by <a href="https://twitter.com/mdo">castle2164m@gmail.com</a>.</p>
-    </div>
-  </footer>
-</div>
+    <h2>Education</h2>
+    <ul>
+      <li>MS</li>
+      <li>D</li>
+    </ul>
+    <h2>Papers</h2>
+    <ul>
+      <li></li>
+      <li></li>
+    </ul>
+    <h2>Talks</h2>
+    <ul>
+      <li></li>
+      <li></li>
+    </ul>
 
+    <h2>Experience</h2>
+    <ul>
+      <li></li>
+      <li></li>
+    </ul>
+
+
+<br>
+<br>
 
 </body>
 </html>
