--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@ include_js: false
 ---
 
 <html lang="en">
-<head>
+<body>
+
    <h1 class="cover-heading">Masaaki Matsunaga</h1>
     <p class="lead">I am a M.S. student in the depertment of Information Technology at the University of the Ryukyus. My research area is Computer Vision. I specialize in Deep Learning Theory and have internship experience at a venture company that analyzes Big Data. My CV can be found the below button</p>
     
